// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block arguments 1`] = `Object {}`;

exports[`Block arguments 2`] = `
Object {
  "a": 1,
}
`;

exports[`Block arguments 3`] = `
Object {
  "a": 0,
  "b": 1,
  "c": 2,
}
`;

exports[`Block arguments 4`] = `
Object {
  "a": 0,
  "c": 2,
}
`;

exports[`Block arguments 5`] = `
Array [
  Provisioner {
    "arguments": Object {
      "a": 0,
    },
    "blockNames": Array [
      "p1",
    ],
    "blockType": "provisioner",
    "innerBlocks": Array [],
    "type": "p1",
  },
  Provisioner {
    "arguments": Object {
      "b": 1,
    },
    "blockNames": Array [
      "p2",
    ],
    "blockType": "provisioner",
    "innerBlocks": Array [],
    "type": "p2",
  },
]
`;

exports[`Block arguments 6`] = `Array []`;
